Added UI and made changes in the logic

--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rock-Paper-Scissor</title>
+    <title>Rock-Paper-Scissors</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
+    <h1>Rock-Paper-Scissors Game</h1>
+    <div>
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissors">Scissors</button>
+    </div>
+    <div id="result"></div>
+    <div id="score">Score: Human 0 - 0 Computer</div>
     <script src="./index.js"></script>
 </body>
 </html>
